# ChangeLog for sci-electronics/gnucap
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gnucap/ChangeLog,v 1.31 2007/02/08 13:29:50 opfer Exp $

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org> gnucap-0.35.ebuild,
  gnucap-20060708.ebuild, gnucap-20060830.ebuild:
  stable x86; bug #165283

  05 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> gnucap-0.35.ebuild,
  gnucap-20060708.ebuild, gnucap-20060830.ebuild:
  Stable on sparc wrt #165283

  04 Feb 2007; Andrej Kacian <ticho@gentoo.org> ChangeLog:
  Stable on x86, bug #165283.

  04 Feb 2007; nixnut <nixnut@gentoo.org> gnucap-0.35.ebuild:
  Stable on ppc wrt bug 165283

  23 Oct 2006; Tim Yamin <plasmaroo@gentoo.org> gnucap-0.35.ebuild,
  gnucap-20060708.ebuild, gnucap-20060830.ebuild:
  Fix #152411.

  02 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gnucap-20060708.ebuild:
  Stable on sparc

*gnucap-0.35 (27 Sep 2006)

  27 Sep 2006; Denis Dupeyron <calchan@gentoo.org> +gnucap-0.35.ebuild:
  Version bump. Until we sort out the mess created by the development
  releases, you will probably want to mask them by adding the following line
  to your package.mask :
  =sci-electronics/gnucap-2006*

  23 Sep 2006; Denis Dupeyron <calchan@gentoo.org> gnucap-20060830.ebuild:
  The readline library is in the base profile. So there is no need to
  explicitely depend on it or make it an option. This fixes bug #148576,
  thanks to Karl Heiss and Jurek Bartuszek.

  19 Sep 2006; Denis Dupeyron <calchan@gentoo.org>
  -files/gnucap-0.34-gcc-3.4.patch, -gnucap-0.34.ebuild,
  -gnucap-20060628.ebuild:
  Removed old ebuilds and patch.

  16 Sep 2006; Olivier Crête <tester@gentoo.org> gnucap-20060708.ebuild:
  Stable on amd64

  16 Sep 2006; Denis Dupeyron <calchan@gentoo.org> gnucap-20060628.ebuild,
  gnucap-20060708.ebuild, gnucap-20060830.ebuild:
  Removed optional dependency to sys-libs/libtermcap-compat, see bug #146894.
  Thanks to Olivier Crete.