@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gnucap/gnucap-20060708.ebuild,v 1.10 2007/02/08 13:29:50 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gnucap/gnucap-20060708.ebuild,v 1.11 2007/02/13 20:06:27 calchan Exp $
 
 MY_PV="${PV:0:4}-${PV:4:2}-${PV:6}"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.geda.seul.org/tools/gnucap"
 IUSE="doc examples readline"
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="amd64 ppc"
+KEYWORDS="amd64"
 
 DEPEND="doc? ( virtual/tetex )
 	readline? ( sys-libs/readline )"
